--- a/.github/workflows/earthly-go-ci.yaml
+++ b/.github/workflows/earthly-go-ci.yaml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: 
       - main
+    paths:
+      - '.github/workflows/earthly-go-ci.yaml'
+      - 'earthly/reduce-code-duplication/**'
 
 jobs:
   reduce-code-duplication:
