--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,10 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-jobs:
-  go-helloworld-build:
-    working_directory: ~/repo/go/helloworld
-    docker:
-      - image: circleci/golang:1.16.3
+
+commands:
+  go-setup:
+    description: "goのセットアップ"
     steps:
-      - checkout:
-          path: ~/repo
       - restore_cache:
           keys:
             - go-mod-v4-{{ checksum "go.sum" }}
@@ -18,6 +15,16 @@ jobs:
           key: go-mod-v4-{{ checksum "go.sum" }}
           paths:
             - "/go/pkg/mod"
+
+jobs:
+  go-helloworld-build:
+    working_directory: ~/repo/go/helloworld
+    docker:
+      - image: circleci/golang:1.16.3
+    steps:
+      - checkout:
+          path: ~/repo
+      - go-setup
       - run:
           name: Build
           command: |
@@ -34,16 +41,7 @@ jobs:
     steps:
       - checkout:
           path: ~/repo
-      - restore_cache:
-          keys:
-            - go-mod-v4-{{ checksum "go.sum" }}
-      - run:
-          name: Install Dependencies
-          command: go mod download
-      - save_cache:
-          key: go-mod-v4-{{ checksum "go.sum" }}
-          paths:
-            - "/go/pkg/mod"
+      - go-setup
       - run:
           name: Run tests
           command: |
