--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,23 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+orbs:
+  go: circleci/go@1.6.0
+
 commands:
   go-setup:
     description: "goのセットアップ"
     steps:
-      - restore_cache:
-          keys:
-            - go-mod-v4-{{ checksum "go.sum" }}
-      - run:
-          name: Install Dependencies
-          command: go mod download
-      - save_cache:
-          key: go-mod-v4-{{ checksum "go.sum" }}
-          paths:
-            - "/go/pkg/mod"
+      - go/load-cache
+      - go/mod-download
+      - go/save-cache
 
 jobs:
   go-helloworld-build:
     working_directory: ~/repo/go/helloworld
-    docker:
-      - image: circleci/golang:1.16.3
+    executor:
+      name: go/default
+      tag: '1.16.3'
     steps:
       - checkout:
           path: ~/repo
@@ -38,6 +35,23 @@ jobs:
     working_directory: ~/repo/go/helloworld
     docker:
       - image: circleci/golang:1.16.3
+    steps:
+      - checkout:
+          path: ~/repo
+      - go-setup
+      - run:
+          name: Run tests
+          command: |
+            mkdir -p /tmp/test-reports
+            gotestsum --junitfile /tmp/test-reports/unit-tests.xml
+      - store_test_results:
+          path: /tmp/test-reports
+
+  go-helloworld-lint:
+    working_directory: ~/repo/go/helloworld
+    executor:
+      name: go/default
+      tag: '1.16.3'
     steps:
       - checkout:
           path: ~/repo
