--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,22 +33,6 @@ jobs:
 
   go-helloworld-test:
     working_directory: ~/repo/go/helloworld
-    docker:
-      - image: circleci/golang:1.16.3
-    steps:
-      - checkout:
-          path: ~/repo
-      - go-setup
-      - run:
-          name: Run tests
-          command: |
-            mkdir -p /tmp/test-reports
-            gotestsum --junitfile /tmp/test-reports/unit-tests.xml
-      - store_test_results:
-          path: /tmp/test-reports
-
-  go-helloworld-lint:
-    working_directory: ~/repo/go/helloworld
     executor:
       name: go/default
       tag: '1.16.3'
@@ -64,9 +48,22 @@ jobs:
       - store_test_results:
           path: /tmp/test-reports
 
+  go-helloworld-lint:
+    working_directory: ~/repo/go/helloworld
+    docker:
+      - image: golangci/golangci-lint:v1.39.0
+    steps:
+      - checkout:
+          path: ~/repo
+      - run:
+          name: Lint
+          command: |
+            golangci-lint run -v
+
 workflows:
   version: 2
   go-helloworld:
     jobs:
       - go-helloworld-build
       - go-helloworld-test
+      - go-helloworld-lint
