--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -1,6 +1,11 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+parameters:
+  go-helloworld:
+    type: boolean
+    default: false
+
 orbs:
   go: circleci/go@1.6.0
 
@@ -63,6 +68,7 @@ jobs:
 workflows:
   version: 2
   go-helloworld:
+    when: << pipeline.parameters.go-helloworld >>
     jobs:
       - go-helloworld-build
       - go-helloworld-test
