--- a/.circleci/setup.yml
+++ b/.circleci/setup.yml
@@ -71,6 +71,12 @@ jobs:
           command: |
             golangci-lint run -v
 
+  try-matches:
+    machine:
+      image: ubuntu-2004:202010-01
+    steps:
+      - run: "echo Hello mathces!"
+
 workflows:
   version: 2
 
@@ -86,3 +92,11 @@ workflows:
       - go-helloworld-build
       - go-helloworld-test
       - go-helloworld-lint
+
+  try-matches:
+    when:
+      matches:
+        pattern: "^try-matches$"
+        value: << pipeline.git.branch >>
+    jobs:
+      - try-matches
