--- a/javascript/strykerjs/package.json
+++ b/javascript/strykerjs/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "test:mutation": "stryker run"
+  },
   "devDependencies": {
     "@stryker-mutator/core": "^5.1.1",
     "@stryker-mutator/jest-runner": "^5.1.1",
