--- a/.github/workflows/setup-node.yaml
+++ b/.github/workflows/setup-node.yaml
@@ -1,19 +1,21 @@
-on: 
+on:
   push:
     paths:
       - ".github/workflows/setup-node.yaml"
+      - "javascript/mswjs/**"
 
 jobs:
   using-cache:
     runs-on: ubuntu-latest
-    # defaults:
-    #   run:
-    #     working-directory: "javascript/mswjs"
+    defaults:
+      run:
+        working-directory: "javascript/mswjs"
     steps:
       - uses: actions/checkout@v2
-      - run: cd javascript/mswjs
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
           cache: 'npm'
+          cache-dependency-path: 'javascript/mswjs'
+      - run: npm ci
       - run: npm run test
