--- a/java/gradle/build.gradle
+++ b/java/gradle/build.gradle
@@ -18,4 +18,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events 'started', 'skipped', 'passed', 'failed'
+        exceptionFormat 'full'
+    }
 }
