--- a/docker/compose/Dockerfile
+++ b/docker/compose/Dockerfile
@@ -1,14 +1,5 @@
-FROM golang:1.16 as build
+FROM ubuntu
 
 WORKDIR /work
 
-COPY main.go go.mod /work/
-
-RUN go get -d -v ./...
-RUN go build -o /go/bin/app
-
-FROM gcr.io/distroless/base-debian10
-
-COPY --from=build /go/bin/app /
-
-ENTRYPOINT ["./app"]
+ENTRYPOINT ["ls"]
