--- a/kubernetes/introduction-to-kubernetes/nginx/nginx-service.yaml
+++ b/kubernetes/introduction-to-kubernetes/nginx/nginx-service.yaml
@@ -3,8 +3,8 @@ kind: Service
 metadata:
   name: my-first-service
   annotations:
-    # https://okteto.com/docs/cloud/ssl/
-    dev.okteto.com/auto-ingress: "true"
+    # https://okteto.com/docs/cloud/private-endpoints/
+    dev.okteto.com/auto-ingress: "private"
 spec:
   selector:
     component: nginx
