--- a/kubernetes/atlantis/service.yaml
+++ b/kubernetes/atlantis/service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: atlantis
+  annotations:
+    # https://okteto.com/docs/cloud/ssl/
+    dev.okteto.com/auto-ingress: "true"
 spec:
   type: ClusterIP
   ports:
