--- a/javascript/mswjs/package.json
+++ b/javascript/mswjs/package.json
@@ -6,11 +6,13 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "axios": "^0.21.1",
+    "eslint": "^8.13.0",
     "jest": "^27.0.3",
     "msw": "^0.29.0",
     "nock": "^13.1.0",
     "ts-jest": "^27.0.2",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "async": "2.6.3"
   }
 }
