--- a/javascript/mswjs/package.json
+++ b/javascript/mswjs/package.json
@@ -12,7 +12,6 @@
     "nock": "^13.1.0",
     "ts-jest": "^27.0.2",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.2",
-    "async": "2.6.3"
+    "typescript": "^4.3.2"
   }
 }
