--- a/javascript/mswjs/package.json
+++ b/javascript/mswjs/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.21.1",
     "eslint": "^8.13.0",
     "jest": "^27.0.3",
+    "jest-junit": "^13.2.0",
     "msw": "^0.29.0",
     "nock": "^13.1.0",
     "ts-jest": "^27.0.2",
