--- a/javascript/nuxt3/quick_start/package.json
+++ b/javascript/nuxt3/quick_start/package.json
@@ -4,9 +4,15 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "lint": "eslint --ext .ts,vue --ignore-path .gitignore ."
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-vue": "^8.7.1",
     "nuxt": "3.0.0-rc.1"
   }
 }
