--- a/.github/workflows/reusable-workflow-b.yaml
+++ b/.github/workflows/reusable-workflow-b.yaml
@@ -4,6 +4,8 @@ on:
   pull_request:
     paths:
       - ".github/workflows/reusable-workflow-b.yaml"
+  schedule:
+    - cron: "*/10 * * * *"
 
 jobs:
   call-workflow-1:
@@ -12,3 +14,4 @@ jobs:
       username: korosuke613
     secrets:
       token: "this is token"
+
