--- a/.github/workflows/repo-visualizer.yaml
+++ b/.github/workflows/repo-visualizer.yaml
@@ -8,12 +8,12 @@ jobs:
   get_data:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: calclate date
-        run: echo "::set-output name=DATE::$(date '+%Y-%m-%dT%H:%M:%S%z')"
+        run: echo "DATE=$(date '+%Y-%m-%dT%H:%M:%S%z')" >> "$GITHUB_OUTPUT"
         id: date-generator
       - name: Update diagram
-        uses: githubocto/repo-visualizer@0.7.1
+        uses: githubocto/repo-visualizer@0.9.1
         with:
           output_file: "repo-diagram.svg"
           commit_message: "Repo visualizer: updated diagram ${{ steps.date-generator.outputs.DATE }} [skip ci]"
