--- a/.github/workflows/required-status-check-and-job-skip.yaml
+++ b/.github/workflows/required-status-check-and-job-skip.yaml
@@ -14,12 +14,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           filter: blob:none
-          fetch-depth: 0 # ファイルの変更を取得するために必要
+          fetch-depth: 2 # ファイルの変更を取得するために必要
       - env:
           TMP_FILE: ${{ runner.temp }}/changed_files.txt
         run: |
-          git fetch origin main
-          git diff --name-only ${{ github.base_ref || 'HEAD^' }} > $TMP_FILE
+          git diff --name-only HEAD^ > $TMP_FILE
           grep --quiet '^frontend/' $TMP_FILE && echo "frontend=true" >> $GITHUB_OUTPUT
           grep --quiet '^backend/' $TMP_FILE && echo "backend=true" >> $GITHUB_OUTPUT
           grep --quiet '^renovate.json$' $TMP_FILE && echo "renovate=true" >> $GITHUB_OUTPUT
