--- a/.github/workflows/use-local-action.yaml
+++ b/.github/workflows/use-local-action.yaml
@@ -9,5 +9,5 @@ jobs:
       - run: npm install
         working-directory: frontend
       - uses: ./.github/actions/setup-playwright
-        with:
-          working-directory: ${{ github.workspace }}/frontend
+        # with:
+          # working-directory: ${{ github.workspace }}/frontend
